tests/baselines/reference/recursiveIntersectionTypes.errors.txt
recursiveIntersectionTypes.ts(19,1): error TS2322: Type 'LinkedList<Entity>' is not assignable to type 'LinkedList<Product>'.
  Property 'price' is missing in type 'LinkedList<Entity>' but required in type 'Product'.


==== recursiveIntersectionTypes.ts (1 errors) ====
    type LinkedList<T> = T & { next: LinkedList<T> };
    
    interface Entity {
        name: string;
    }
    
    interface Product extends Entity {
        price: number;
    }
    
    var entityList: LinkedList<Entity>;
    var s = entityList.name;
    var s = entityList.next.name;
    var s = entityList.next.next.name;
    var s = entityList.next.next.next.name;
    
    var productList: LinkedList<Product>;
    entityList = productList;
    productList = entityList;  // Error
    ~~~~~~~~~~~
!!! error TS2322: Type 'LinkedList<Entity>' is not assignable to type 'LinkedList<Product>'.
!!! error TS2322:   Property 'price' is missing in type 'LinkedList<Entity>' but required in type 'Product'.
!!! related TS2728 recursiveIntersectionTypes.ts:8:5: 'price' is declared here.
    